# GenAI-Project-DataSci

./: .gitignore  README.md  requirements.txt
Project_1/: app.py
Project_3/fullstack_agents/: README.md  pyproject.toml
Project_3/fullstack_agents/src/fullstack_agents/: app.py  crew.py  main.py
Project_3/fullstack_agents/src/fullstack_agents/config/: agents.yaml  tasks.yaml
Project_3/pcrecommender/: README.md  pyproject.toml  relatorio_final-example.md
Project_3/pcrecommender/src/pcrecommender/: crew.py  main.py
Project_3/pcrecommender/src/pcrecommender/config/: agents.yaml  tasks.yaml
project1/: .env_example  README.md  app.py  database.py  html_templates.py  ui_handlers.py  utils.py
project2-fine-tuning/: app.py
project2-fine-tuning/datasets/: musculacao_dataset.json
project2-fine-tuning/ds_otim_hf/: state.json
project2-fine-tuning/results/checkpoint-9/: rng_state.pth  scheduler.pt  trainer_state.json
stuff/colab/ds_otim_hf/: data-00000-of-00001.arrow  state.json
