[project]
name = "fullstack_agents"
version = "0.1.0"
description = "fullstack-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
fullstack_agents = "fullstack_agents.main:run"
run_crew = "fullstack_agents.main:run"
train = "fullstack_agents.main:train"
replay = "fullstack_agents.main:replay"
test = "fullstack_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
