[project]
name = "pcrecommender"
version = "0.1.0"
description = "PcRecommender using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
pcrecommender = "pcrecommender.main:run"
run_crew = "pcrecommender.main:run"
train = "pcrecommender.main:train"
replay = "pcrecommender.main:replay"
test = "pcrecommender.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
